# proxmox-vm-laucher

./: .gitignore  .prettierignore  GIT_WORKFLOW.md  GTK_MIGRATION_PLAN.md  README.md  RELEASING.md  commitlint.config.js  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  pve-connect.sh  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/proposals/: window-module-architecture.md
electron/: main.ts  preload.ts
electron-app/: .gitignore  index.html  main.js  package-lock.json  package.json
electron-app/electron/: main.ts  preload.ts
electron-app/src/: App.tsx  vite-env.d.ts
electron-app/src/components/: ConnectionForm.tsx  TitleBar.tsx
electron-app/src/components/Alert/: Alert.tsx
electron-app/src/config/: routes.tsx
electron-app/src/contexts/: LayoutProvider.tsx
electron-app/src/icons/: DownloadIcon.tsx  PauseIcon.tsx  PlugIcon.tsx  SpinnerIcon.tsx  index.ts
electron-app/src/routes/: VirtualMachinesLayout.tsx
electron-app/src/stores/: configStore.ts  updateStore.ts  vmStore.ts
electron-app/src/types/: proxmox.ts
gtk-app/: Cargo.toml
gtk-app/src/: app.rs  main.rs
gtk-app/src/api/: auth.rs  client.rs  error.rs  mod.rs  spice.rs  tasks.rs  vms.rs
gtk-app/src/models/: connection.rs  mod.rs  task.rs  vm.rs
gtk-app/src/ui/: mod.rs
gtk-app/src/ui/login/: login_page.rs  mod.rs
gtk-app/src/ui/main/: main_page.rs  mod.rs  vm_item.rs
gtk-app/src/utils/: config.rs  mod.rs
src/: App.test.tsx  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  proxmox.rs
src/components/: ConfirmDialog.tsx  ConnectionForm.tsx  Icons.tsx  ServerConfig.tsx  TitleBar.tsx  VMList.tsx
src/components/Alert/: Alert.tsx
src/components/Header/: Header.tsx
src/components/ProtectedRoute/: ProtectedRoute.tsx
src/components/ServerConfig/: ServerConfig.tsx
src/components/ThemeToggle/: ThemeToggle.tsx
src/components/TitleBar/: TitleBar.tsx
src/components/Tooltip/: Tooltip.tsx
src/components/UpdateBadge/: UpdateBadge.tsx
src/components/VMFilter/: VMFilter.tsx
src/components/VMItem/: VMItem.tsx  utils.ts
src/components/VMList/: VMList.tsx
src/config/: routes.tsx
src/contexts/: LayoutContext.tsx  LayoutProvider.tsx
src/icons/: ComputerIcon.tsx  DownloadIcon.tsx  MonitorIcon.tsx  PauseIcon.tsx  PlayIcon.tsx  PlugIcon.tsx  RefreshIcon.tsx  ResumeIcon.tsx  SpinnerIcon.tsx  StopIcon.tsx  index.ts
src/layouts/: MainLayout.tsx  VirtualMachinesLayout.tsx
src/main/: main.ts
src/pages/AddServer/: AddServer.tsx
src/pages/Login/: Login.tsx
src/pages/VirtualMachines/: VirtualMachines.tsx
src/preload/: preload.ts
src/renderer/: App.tsx  vite-env.d.ts
src/renderer/config/: routes.tsx
src/renderer/icons/: CloseIcon.tsx  ErrorIcon.tsx  InfoIcon.tsx  LogoutIcon.tsx  MonitorIcon.tsx  MoonIcon.tsx  RefreshIcon.tsx  SuccessIcon.tsx  SunIcon.tsx  WarningIcon.tsx  index.ts
src/renderer/routes/: VirtualMachinesLayout.tsx  index.tsx
src/renderer/stores/: useUpdateStore.ts  useVMStore.tsx
src/stores/: authStore.ts  authStore.tsx  configStore.ts  filterStore.ts  serverStore.ts  themeStore.ts  updateStore.ts  vmStore.ts  vmStore.tsx
src/types/: proxmox.ts
(+57 files in other folders)
