[package]
name = "pve-launcher-gtk"
version = "0.1.0"
edition = "2021"
description = "PVE Launcher - GTK4 Native Version"
authors = ["ajmasia"]

[dependencies]
# GTK4 and Libadwaita
gtk4 = "0.9"
libadwaita = "0.7"
relm4 = "0.9"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL encoding
urlencoding = "2"

# Error handling
thiserror = "1"

# Config directories
directories = "5"

# UUID for server IDs
uuid = { version = "1", features = ["v4"] }
