[package]
name = "pvel"
version = "0.4.0"
description = "PVE Launcher - Connect to Proxmox VMs using SPICE"
authors = ["ajmasia"]
edition = "2021"

[lib]
name = "proxmox_vm_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
urlencoding = "2.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"

# Optimize release builds
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
